--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,11 @@ uuid = "d5de4fbe-640e-469d-b7ad-3c69fc3f3f61"
 authors = ["Paulo Jabardo", "IPT"]
 version = "0.1.0"
 
+[deps]
+CurveFit = "5a033b19-8c74-5913-a970-47c3779ef25c"
+Polynomials = "f27b6e38-b328-58d1-80ce-0feddd5e7a45"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+
 [compat]
 julia = "1"
 
