--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ Polynomials = "f27b6e38-b328-58d1-80ce-0feddd5e7a45"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 [compat]
+Polynomials = "4"
 julia = "1"
 
 [extras]
